Linux only cluster using azure npm/Case-4-Allow-ingress-from-a-namespace/Serverpods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: linux-backend-pod
  namespace: development
  labels:
    app: backend
spec:
  containers:
    - name: backend
      image: mcr.microsoft.com/oss/nginx/nginx:1.15.5-alpine
      ports:
        - containerPort: 80
