Linux only cluster using azure npm/Case-4-Allow-ingress-from-a-namespace/Networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-from-a-namespace
  namespace: development
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              purpose: default
